@@ -1,4 +1,4 @@
 DIST pyxmpp-1.0.0.tar.gz 669021 RMD160 148d07c97ca715985a57984fdc6c228dbe1fb019 SHA1 6a8d88ed79153175698cd0ffc914ea37c3f526ce SHA256 924ba0cde1e630b53784623cdaab35f0da6e81e7b8a11e6927cd38420a781267
-EBUILD pyxmpp-1.0.0-r1.ebuild 884 RMD160 02f79d093cd8e44cd654934993d38ee4c9e76958 SHA1 e85c97f8168977396ab0172f9853e372052a3823 SHA256 690ac9c5d7bfaab357cf0e6bed22cd0c32c0e7d60423ef914f9ff755f1a5b4a7
-MISC ChangeLog 570 RMD160 ed8aa11c8416bc35f80dd9a31e34200ceb2cb4ee SHA1 0e2cec0a7633f69f04b3fcf6c5764e5581f79b10 SHA256 504c3831bbd242850403994b4baa1bbb675dd62e56863afc59012b0aaff46397
+EBUILD pyxmpp-1.0.0-r1.ebuild 906 RMD160 cedbf9c2678f6709a50e0ee297458fa93a618300 SHA1 f70ed7b82bf67e125a9731fe150c5ac0e5e1cab1 SHA256 fb4404f6cf9aeb74f1331388b3d0b844b09a7ee67334027c053eddbca8fe48f7
+MISC ChangeLog 709 RMD160 e2d4867d63c9f7ee2f0c4645b17d0cfd5f8da4e5 SHA1 9b315cd10939a354a6509a74a6c1a2dd0cfd2d24 SHA256 51fde74e6a5f343d6e00dc27c465e8271d40f01f17b59c988b0266c8dbc11406
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
