@@ -1,6 +1,10 @@
 # ChangeLog for net-im/pyxmpp
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jul 2008; Leonid Evdokimov (darkk) <leon@darkk.net.ru>
+  pyxmpp-1.0.0-r1.ebuild:
+  Fixed package installation, added "doc" use-flag.
 
   18 Apr 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
   Cosmetics and don't make ebuilds executables
